--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Hello World</h1>
-   <p>It's me, don't be scare</p> 
+   <p>It's me, don't be scare</p>
+   <div>Your friend</div>
 </body>
 </html>
